Add imgs resources

--- a/index_m.html
+++ b/index_m.html
@@ -7,8 +7,8 @@
     <link rel="icon" href="static/img/favicon.ico">
 
     <script language="javascript" type="text/javascript">
-        if(navigator.userAgent.match(/(iPhone|iPod|Android|ios)/i)){
-            document.location.href="index_m.html";
+        if(!navigator.userAgent.match(/(iPhone|iPod|Android|ios)/i)){
+            document.location.href="index.html";
         }
     </script>
 
