--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@
     #page4-bar:hover{background: rgba(255, 255, 255, 0.8);}
     .page4-block{float:left;width:350px;margin: 0 5px 0 5px;}
     .page4-title{font-size: 22px;font-weight: bold;}
+    .page4-img img{margin:10px;width: 330px;height: 220px;}
+    .page4-img img:hover{background-color:gray;cursor:pointer;width: 360px;height: 240px;}
 
     #cover-5{width:100%;height:100%;background-image:url('static/img/cover5.jpg');
                        background-repeat:no-repeat;
@@ -200,12 +202,21 @@
                         <div>
                             <div class="page4-block">
                                 <div class="page4-title">Affiliate Network</div>
+                                <div class="page4-img">
+                                    <img src="static/img/affiliate-network.jpg"/>
+                                </div>
                             </div>
                             <div class="page4-block">
                                 <div class="page4-title">DSP</div>
+                                <div class="page4-img">
+                                    <img src="static/img/dsp.jpg"/>
+                                </div>
                             </div>
                             <div class="page4-block">
                                 <div class="page4-title">Media Buy</div>
+                                <div class="page4-img">
+                                    <img src="static/img/mediabuy.jpg"/>
+                                </div>
                             </div>
                         </div>
                     </div>
